<resources>
    <string name="app_name">PolyDessin</string>
    <string name="register_btn">Créer le compte</string>
    <string name="psw_diff_values_error">Les mots de passe doivent être les mêmes</string>
    <string name="psw_no_digit_error">Doit contenir un chiffre</string>
    <string name="psw_min_length_error">Doit avoir une longueur minimale de 8 caractères</string>
    <string name="register_title_text">Créer votre compte</string>
    <string name="register_firstname">Prénom</string>
    <string name="register_lastname">Nom</string>
    <string name="register_username">Nom d\'utilisateur</string>
    <string name="register_email">Adresse courriel</string>
    <string name="register_psw">Mot de passe</string>
    <string name="register_psw_confirm">Confimation de mot de passe</string>
    <string name="user_creds">userCredentials</string>
    <string name="welcome_message">Bienvenue sur PolyDessin</string>
    <string name="email_header_title"> Username</string>
    <string name="password_header_title"> Mot de passe</string>
    <string name="connect_button_header">Se connecter</string>
    <string name="forgotten_password_header">"J'ai oublié mon mot de passe"</string>
    <string name="create_acccount_header">Créer un compte</string>
    <string name="title_activity_account_management">AccountManagementActivity</string>
    <string name="dashboard">Tableau de bord</string>
    <string name="userProfile">Profil utilisateur</string>
    <string name="accountSettings">Paramètres</string>
    <string name="disconnect">Deconnexion</string>
    <string name="profile">Profil</string>
    <string name="userGuide">Guide utilisateur</string>
    <string name="play">Jouer</string>
    <string name="picword">Mot-image</string>
    <string name="lobbyList">Liste des parties</string>
    <string name="joinGame">Rejoindre une partie</string>
    <string name="createGame">Choisir le mode de jeu</string>
    <string name="mainmenu">Menu pincipal</string>
    <string name="cancel">Annuler</string>
    <string name="gameName">Nom de la partie</string>
    <string name="create">Créer</string>
    <string name="join">Rejoindre</string>
    <string name="difficulty">Difficulté</string>
    <string name="gamemode">Mode de jeu</string>
    <string name="invalid_username_password">"Nom d'utilisateur ou Mot de passe invalide, veuillez réessayer"</string>
    <string name="start_game_button_text">Lancer la partie</string>
    <string name="team_2_base_name">Équipe 2</string>
    <string name="team_1_base_name">Équipe 1</string>
    <string name="game_mode_base_text">Mode de Jeu</string>
    <string name="logo">logo</string>
    <string name="player1_base_name">Joueur1</string>
    <string name="remove_player_button_text">REMOVE</string>
    <string name="player4_base_name">Joueur4</string>
    <string name="player3_base_name">Joueur3</string>
    <string name="player2_base_name">Joueur2</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_search_lobby">SearchLobbyActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="game_mode">Game Mode</string>
    <string name="game_owner">Game Owner</string>
    <string name="lobby_name">Lobby Name</string>
    <string name="game_capacity">Game Capacity</string>
    <string name="join_game">Rejoindre</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="timer_over">0:00</string>
    <string name="logout_button">logout button</string>
    <string name="base_player_name">PlayerName</string>
    <string name="avatar_description">the avatar of the player</string>
    <string name="loading">Attendre plz</string>
    <string name="quit_label">Quitter</string>
    <string name="timer_icon_des">timer icon</string>
    <string name="continuer_partie">Continuer</string>
    <string name="team1_label">Équipe 1 -</string>
    <string name="team2_label">Équipe 2 -</string>
    <string name="coopTeamLabel">Joueurs</string>
    <string name="tableau_de_bord">Tableau de Bord</string>
    <string name="friends">Amis</string>
    <string name="statistiques_label">Statistiques</string>
    <string name="nb_games">Nombre de parties jouées</string>
    <string name="win_percentage">Poucentage de victoires</string>
    <string name="nb_hours_connection">Nombre d\'heures de connexion</string>
    <string name="returnbutton">Retour</string>
    <string name="history_label">Historique des parties jouées</string>
    <string name="first_name_hint">Prénom</string>
    <string name="last_name_hint">Nom</string>
    <string name="username_hint">Nom d\'utilisateur</string>
    <string name="email_hint">Email</string>
    <string name="profile_label">Profil</string>
    <string name="confirm_btn">Confirmer</string>
    <string name="nb_hours_in_game">Nombre d\'heures en jeu</string>
    <string name="average_time_game">Temps moyen d\'une partie</string>
    <string name="createRoom">Créer un salon</string>
    <string name="destroy">Détruire</string>
    <string name="rooms">Salons</string>
    <string name="rooms_chat">Salons de discussion</string>
    <string name="pending">En attente...</string>
    <string name="modify_image">Cliquez pour modifier l\'image</string>
    <string name="score_sprint_solo">Meilleur Score Sprint Solo</string>
    <string name="score_sprint_coop">Meilleur Score Sprint Coop</string>
    <string name="bot_player">Joueur virtuel</string>
    <string name="continue_tutorial">Continuer Le tutoriel</string>
    <string name="emptyLobbylistMsg">Il n\'y a présentement auncun lobby disponible</string>
    <string name="start">Commencer</string>
    <string name="menu_create_game">Créer une partie</string>
</resources>