<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewmodel"
            type="com.projet.clientleger.ui.register.viewmodel.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.register.view.RegisterActivity">

        <LinearLayout
            android:id="@+id/registerInfo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.90"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.5">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:src="@mipmap/polydessin_icon_round" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_title_text"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/RegisterTextInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:hint="@string/register_firstname">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/first_name"
                        style="@style/RegisterTextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewmodel.registerFistNameLiveData}" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/RegisterTextInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:hint="@string/register_lastname">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/last_name"
                        style="@style/RegisterTextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewmodel.registerLastNameLiveData}" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/RegisterTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_username">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    style="@style/RegisterTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewmodel.registerUsernameLiveData}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/RegisterTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    style="@style/RegisterTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewmodel.registerEmailLiveData}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/RegisterTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_psw">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    style="@style/RegisterTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:text="@={viewmodel.registerPasswordLiveData}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/RegisterTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_psw_confirm">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordConfirm"
                    style="@style/RegisterTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:text="@={viewmodel.registerPasswordConfirmLiveData}" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/different_password_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/psw_diff_values_error"
                android:textColor="@color/register_valid"
                app:drawableStartCompat="@drawable/ic_baseline_done_24" />

            <TextView
                android:id="@+id/password_no_digit_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/psw_no_digit_error"
                android:textColor="@color/register_error"
                app:drawableStartCompat="@drawable/ic_baseline_close_24" />

            <TextView
                android:id="@+id/password_min_length_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/psw_min_length_error"
                android:textColor="@color/register_error"
                app:drawableStartCompat="@drawable/ic_baseline_close_24" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/register_btn" />

                <ProgressBar
                    android:id="@+id/loadingBar"
                    style="@style/Widget.MaterialComponents.CircularProgressIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:elevation="5dp"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/white"
                    android:padding="5dp" />

            </RelativeLayout>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>