<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.connexion.view.ConnexionActivity">

    <LinearLayout
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.25"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.6"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:background="@drawable/login_screen_logo"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/welcome_message"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email_header_title"
                    android:textColor="@color/black" />
                <EditText
                    android:id="@+id/connectionUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:inputType="text"
                    android:textSize="15sp">
                </EditText>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password_header_title"
                    android:textColor="@color/black" />
                <EditText
                    android:id="@+id/connectionPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:inputType="textPassword"
                    android:textSize="15sp">
                </EditText>
            </LinearLayout>

        <Button
            android:id="@+id/connectBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_button"
            android:text="@string/connect_button_header"
            android:textSize="15sp"
            android:textAllCaps="false"
            android:minHeight="0dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                >
                <Button
                    android:id="@+id/forgottenPasswordBtn"
                    android:layout_width="0dp"
                    android:layout_weight="0.15"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/forgotten_password_header"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:minHeight="0dp"/>

                <Button
                    android:id="@+id/createAccountBtn"
                    android:layout_width="0dp"
                    android:layout_weight="0.1"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/create_acccount_header"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:minHeight="0dp"
                     />
            </LinearLayout>
        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>